--- a/styles.css
+++ b/styles.css
@@ -7,16 +7,18 @@ header {
     text-align: center;
 }
 
-nav > ul{
-    list-style: none;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    gap: 30px;
+/* Navbar styling */
+.navbar {
+    margin-bottom: 20px;
 }
 
-nav > ul > li > a {
-    text-decoration: none;
+.navbar-nav {
+    width: 100%;
+    justify-content: center;
+}
+
+.nav-link {
+    padding: 10px 20px !important;
 }
 
 footer {
@@ -38,28 +40,6 @@ footer {
 
 /* Mobile improvements */
 @media only screen and (max-width: 768px) {
-    /* Make navigation much bigger */
-    nav > ul {
-        flex-direction: column;
-        gap: 5px;
-        padding: 10px 0;
-    }
-    
-    nav > ul > li {
-        width: 100%;
-    }
-    
-    nav > ul > li > a {
-        padding: 20px;
-        font-size: 22px;
-        display: block;
-        text-align: center;
-        background-color: #333;
-        color: white;
-        border-radius: 5px;
-        margin: 5px 0;
-    }
-    
     /* Make body content bigger */
     body {
         width: 95%;
